<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/principalFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/galeriaFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/notificacionesFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/perfilFragment"
            android:icon="@drawable/perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/ayudaFragment"
            android:icon="@drawable/ayuda"
            android:title="@string/Ayuda" />
    </group>
</menu>